--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
+  <p>Footer<a href="https://www.w3schools.com"></a></p> 
 </footer>
 
 </body>
